--- a/WebApplicationTravel/Views/Cities/Details.cshtml
+++ b/WebApplicationTravel/Views/Cities/Details.cshtml
@@ -43,6 +43,14 @@
             @Html.DisplayFor(model => model.CarRentalPriceKey)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Coordinate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Coordinate)
+        </dd>
+
     </dl>
 </div>
 <p>
