--- a/WebApplicationTravel/Views/Cities/Delete.cshtml
+++ b/WebApplicationTravel/Views/Cities/Delete.cshtml
@@ -44,6 +44,14 @@
             @Html.DisplayFor(model => model.CarRentalPriceKey)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Coordinate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Coordinate)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
