--- a/WebApplicationTravel/Views/Cities/Edit.cshtml
+++ b/WebApplicationTravel/Views/Cities/Edit.cshtml
@@ -51,6 +51,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Coordinate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Coordinate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Coordinate, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
