--- a/WebApplicationTravel/Views/Shared/_Layout.cshtml
+++ b/WebApplicationTravel/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Cities", "Index", "Cities")</li>
                     <li>@Html.ActionLink("Countries", "Index", "Countries")</li>
+                    <li>@Html.ActionLink("Connections", "Index", "Connections")</li>
                     <li>@Html.ActionLink("Back", "Index", "Home")</li>
                 </ul>
             </div>
