--- a/WebApplicationTravel/Views/Connections/Delete.cshtml
+++ b/WebApplicationTravel/Views/Connections/Delete.cshtml
@@ -60,6 +60,22 @@
             @Html.DisplayFor(model => model.CarPrice)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.CarAvailabilty)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CarAvailabilty)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FlightAvailabilty)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FlightAvailabilty)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
