--- a/WebApplicationTravel/Views/Shared/_MyTemplate.cshtml
+++ b/WebApplicationTravel/Views/Shared/_MyTemplate.cshtml
@@ -98,6 +98,7 @@
                         <li><a href="car.html">Car</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li>@Html.ActionLink("Admin", "Login", "Accounts")</li>
                     </ul>
                     <ul>
                         <li class="btn-cta"><a href="#"><span><b>Log in</b></span></a></li>
