--- a/WebApplicationTravel/Views/Connections/Create.cshtml
+++ b/WebApplicationTravel/Views/Connections/Create.cshtml
@@ -65,6 +65,26 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.CarAvailabilty, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.CarAvailabilty)
+                    @Html.ValidationMessageFor(model => model.CarAvailabilty, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.FlightAvailabilty, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.FlightAvailabilty)
+                    @Html.ValidationMessageFor(model => model.FlightAvailabilty, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
