--- a/WebApplicationTravel/Views/Connections/Details.cshtml
+++ b/WebApplicationTravel/Views/Connections/Details.cshtml
@@ -59,6 +59,22 @@
             @Html.DisplayFor(model => model.CarPrice)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.CarAvailabilty)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CarAvailabilty)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FlightAvailabilty)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FlightAvailabilty)
+        </dd>
+
     </dl>
 </div>
 <p>
