--- a/WebApplicationTravel/Views/Accounts/Register.cshtml
+++ b/WebApplicationTravel/Views/Accounts/Register.cshtml
@@ -1,10 +1,11 @@
-﻿   
+﻿
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Register";
     Layout = "~/Views/Shared/_LoginPage.cshtml";
 }
 
-<h1>Login Form</h1>
+<h2>Register</h2>
+<h1>Register Form</h1>
 <!-- //title -->
 <!-- content -->
 <div class="sub-main-w3">
@@ -12,8 +13,8 @@
         <div class="top-content-style">
             <img src="@Url.Content("~/Content/LoginPage/")images/msg.jpg" alt="" />
         </div>
-        <form action="Login" method="post">
-            <p class="legend">Login Here<span class="fa fa-hand-o-down"></span></p>
+        <form action="Register" method="post">
+            <p class="legend">Register Here<span class="fa fa-hand-o-down"></span></p>
             <div class="input">
                 <input type="text" placeholder="User Name" name="UserName" required />
                 <span class="fa fa-envelope"></span>
