--- a/WebApplicationTravel/Views/Shared/_MyTemplate.cshtml
+++ b/WebApplicationTravel/Views/Shared/_MyTemplate.cshtml
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-
+    
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
 
@@ -78,12 +78,12 @@
         <div class="container">
             <div class="nav-header">
                 <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-                <h1 id="fh5co-logo"><a href="index.html"><i class="icon-airplane"></i>MSG <br />Find your next vacation</a></h1>
+                <h1 id="fh5co-logo"><a><i class="icon-airplane"></i>MSG - Find your next vacation</a></h1>
                 <!-- START #fh5co-menu-wrap -->
                 <nav id="fh5co-menu-wrap" role="navigation">
                     <ul class="sf-menu" id="fh5co-primary-menu">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li>
+                        <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
+                        @*<li>
                             <a href="vacation.html" class="fh5co-sub-ddown">Vacations</a>
                             <ul class="fh5co-sub-menu">
                                 <li><a href="#">Family</a></li>
@@ -92,20 +92,29 @@
                                 <li><a href="#">Node JS</a></li>
                                 <li><a href="#">Django &amp; Python</a></li>
                             </ul>
-                        </li>
+                        </li>*@
                         <li><a href="flight.html">Flights</a></li>
-                        <li><a href="hotel.html">Hotel</a></li>
+                        @*<li><a href="hotel.html">Hotel</a></li>*@
                         <li><a href="car.html">Car</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li>@Html.ActionLink("Admin", "Login", "Accounts")</li>
+                        @*<li><a href="blog.html">Blog</a></li>*@
+                       @* <li><a href="Contact.cshtml">About us</a></li>*@
+                
+                        @if (Session["UserName"] != null)
+                        {
+                            <li>@Html.ActionLink("Hello " + Session["UserName"], "getFlights", "Accounts")</li>
+                            <li>@Html.ActionLink("Logout", "Logout", "Accounts")</li>
+                            if (Session["Admin"] != null)
+                            {
+                                <li>@Html.ActionLink("DataBase", "Index", "Cities")</li>
+                            }
+                        }
+                        else
+                        {
+                            <li>@Html.ActionLink("Sign-in", "Login", "Accounts")</li>
+                            <li>@Html.ActionLink("Sign-up", "Register", "Accounts")</li>
+                        }
                     </ul>
-                    <ul>
-                        <li class="btn-cta"><a href="#"><span><b>Log in</b></span></a></li>
-                        <li class="btn-cta"><a href="#"><span><b>Sign up</b></span></a></li>
-                    </ul>
-
-                </nav>
+                 </nav>
             </div>
         </div>
     </header>
