--- a/WebApplicationTravel/Views/Home/Index.cshtml
+++ b/WebApplicationTravel/Views/Home/Index.cshtml
@@ -32,16 +32,17 @@
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane active" id="roundtrip">
                                     <div class="row">
+                                        <form action=@Url.Action("calcPath", "Reservations")>
                                         <div class="col-xxs-12 col-xs-6 mt">
                                             <div class="input-field">
                                                 <label for="from">From:</label>
-                                                <input type="text" class="form-control" id="from-place" placeholder="TLV, Israel" />
+                                                <input type="text" class="form-control" id="from-place" name="from" value="TLV, Israel" />
                                             </div>
                                         </div>
                                         <div class="col-xxs-12 col-xs-6 mt">
                                             <div class="input-field">
                                                 <label for="from">To:</label>
-                                                <input type="text" class="form-control" id="to-place" placeholder="Melbourne, Australia" />
+                                                <input type="text" class="form-control" id="to-place" name="dest" placeholder="Melbourne, Australia" />
                                             </div>
                                         </div>
                                         <div class="col-xxs-12 col-xs-6 mt alternate">
@@ -56,17 +57,7 @@
                                                 <input type="text" class="form-control" id="date-end" placeholder="mm/dd/yyyy" />
                                             </div>
                                         </div>
-                                        <div class="col-sm-12 mt">
-                                            <section>
-                                                <label for="class">Class(Flights only):</label>
-                                                <select class="cs-select cs-skin-border">
-                                                    <option value="" disabled selected>Economy</option>
-                                                    <option value="economy">Economy</option>
-                                                    <option value="first">First</option>
-                                                    <option value="business">Business</option>
-                                                </select>
-                                            </section>
-                                        </div>
+                                   
                                         <div class="col-xxs-12 col-xs-6 mt">
                                             <section>
                                                 <label for="class">Number of persons:</label>
@@ -81,12 +72,13 @@
                                             </section>
                                         </div>
                                         <div class="col-xs-12">
-                                            <input type="submit" class="btn btn-primary btn-block" value="Find me the cheapest way!">
+                                            <input type="submit" class="btn btn-primary btn-block" name="submit" value="Find me the cheapest way!">
                                         </div>
                                         <div class="col-xs-12">
                                             <br>
-                                            <input type="submit" class="btn btn-primary btn-block" value="Find me the fastest way!">
+                                            <input type="submit" class="btn btn-primary btn-block" name="submit" value="Find me the fastest way!">
                                         </div>
+                                        </form>
                                     </div>
                                 </div>
 
