--- a/WebApplicationTravel/Views/Home/Index.cshtml
+++ b/WebApplicationTravel/Views/Home/Index.cshtml
@@ -36,13 +36,13 @@
                                         <div class="col-xxs-12 col-xs-6 mt">
                                             <div class="input-field">
                                                 <label for="from">From:</label>
-                                                <input type="text" class="form-control" id="from-place" name="from" value="TLV, Israel" />
+                                                <input type="text" class="form-control" id="from-place" name="from" value="tel aviv" />
                                             </div>
                                         </div>
                                         <div class="col-xxs-12 col-xs-6 mt">
                                             <div class="input-field">
                                                 <label for="from">To:</label>
-                                                <input type="text" class="form-control" id="to-place" name="dest" placeholder="Melbourne, Australia" />
+                                                <input type="text" class="form-control" id="to-place" name="dest" placeholder="rome" />
                                             </div>
                                         </div>
                                         <div class="col-xxs-12 col-xs-6 mt alternate">
@@ -87,13 +87,13 @@
                                         <div class="col-xxs-12 col-xs-6 mt">
                                             <div class="input-field">
                                                 <label for="from">From:</label>
-                                                <input type="text" class="form-control" id="from-place" placeholder="TLV, Israel" />
+                                                <input type="text" class="form-control" id="from-place" placeholder="tel aviv" />
                                             </div>
                                         </div>
                                         <div class="col-xxs-12 col-xs-6 mt">
                                             <div class="input-field">
                                                 <label for="from">To:</label>
-                                                <input type="text" class="form-control" id="to-place" placeholder="Melbourne, Australia" />
+                                                <input type="text" class="form-control" id="to-place" placeholder="rome" />
                                             </div>
                                         </div>
                                         <div class="col-xxs-12 col-xs-6 mt alternate">
@@ -141,13 +141,13 @@
                                         <div class="col-xxs-12 col-xs-6 mt">
                                             <div class="input-field">
                                                 <label for="from">From:</label>
-                                                <input type="text" class="form-control" id="from-place" placeholder="TLV, Israel" />
+                                                <input type="text" class="form-control" id="from-place" placeholder="tel aviv" />
                                             </div>
                                         </div>
                                         <div class="col-xxs-12 col-xs-6 mt">
                                             <div class="input-field">
                                                 <label for="from">To:</label>
-                                                <input type="text" class="form-control" id="to-place" placeholder="Melbourne, Australia" />
+                                                <input type="text" class="form-control" id="to-place" placeholder="rome" />
                                             </div>
                                         </div>
                                         <div class="col-xxs-12 col-xs-6 mt alternate">
