--- a/WebApplicationTravel/Views/Reservations/Index.cshtml
+++ b/WebApplicationTravel/Views/Reservations/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_LoginPage.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Index</h2>
@@ -13,7 +13,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Account.UserName)
+            @Html.DisplayNameFor(model => model.totalPrice)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.totalTime)
         </th>
         <th></th>
     </tr>
@@ -21,7 +24,10 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Account.UserName)
+            @Html.DisplayFor(modelItem => item.totalPrice)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.totalTime)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ReservationId }) |
