--- a/WebApplicationTravel/Views/Reservations/Delete.cshtml
+++ b/WebApplicationTravel/Views/Reservations/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_LoginPage.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Delete</h2>
@@ -13,11 +13,19 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Account.UserName)
+            @Html.DisplayNameFor(model => model.totalPrice)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Account.UserName)
+            @Html.DisplayFor(model => model.totalPrice)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.totalTime)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.totalTime)
         </dd>
 
     </dl>
