--- a/WebApplicationTravel/Views/Home/Index.cshtml
+++ b/WebApplicationTravel/Views/Home/Index.cshtml
@@ -12,21 +12,13 @@
                 <div class="row">
                     <div class="col-sm-5 col-md-5">
                         <div class="tabulation animate-box">
-
+                            
                             <!-- Nav tabs -->
-                            <ul class="nav nav-tabs" role="tablist">
-
+                            <!--<ul class="nav nav-tabs" role="tablist">
                                 <li role="presentation" class="active">
-                                    <a href="#roundtrip" aria-controls="roundtrip" role="tab" data-toggle="tab">RoundTrip</a>
+                                    <a href="#roundtrip" aria-controls="roundtrip" role="tab" data-toggle="tab">MSG</a>
                                 </li>
-
-                                <li role="presentation">
-                                    <a href="#oneway" aria-controls="oneway" role="tab" data-toggle="tab">One Way</a>
-                                </li>
-                                <li role="presentation">
-                                    <a href="#multicity" aria-controls="multicity" role="tab" data-toggle="tab">Multi-City</a>
-                                </li>
-                            </ul>
+                            </ul> -->
 
                             <!-- Tab panes -->
                             <div class="tab-content">
@@ -37,12 +29,22 @@
                                             <div class="input-field">
                                                 <label for="from">From:</label>
                                                 <input type="text" class="form-control" id="from-place" name="from" value="tel aviv" />
+                                                @if (Session["wrong source"] != null)
+                                                {
+                                                    <h6 style="color:Tomato;">Wrong Source</h6>
+                                                    <h6 style="color:Tomato;">Please try again.</h6>
+                                                }
                                             </div>
                                         </div>
                                         <div class="col-xxs-12 col-xs-6 mt">
                                             <div class="input-field">
                                                 <label for="from">To:</label>
                                                 <input type="text" class="form-control" id="to-place" name="dest" placeholder="rome" />
+                                                @if (Session["wrong dest"] != null)
+                                                {
+                                                    <h6 style="color:Tomato;">Wrong Destination!</h6>
+                                                    <h6 style="color:Tomato;">Please try again.</h6>
+                                                }
                                             </div>
                                         </div>
                                         <div class="col-xxs-12 col-xs-6 mt alternate">
@@ -59,17 +61,6 @@
                                         </div>
                                    
                                         <div class="col-xxs-12 col-xs-6 mt">
-                                            <section>
-                                                <label for="class">Number of persons:</label>
-                                                <select class="cs-select cs-skin-border">
-                                                    <option value="" disabled selected>1</option>
-                                                    <option value="1">1</option>
-                                                    <option value="2">2</option>
-                                                    <option value="3">3</option>
-                                                    <option value="4">4</option>
-                                                    <option value="5">5</option>
-                                                </select>
-                                            </section>
                                         </div>
                                         <div class="col-xs-12">
                                             <input type="submit" class="btn btn-primary btn-block" name="submit" value="Find me the cheapest way!">
@@ -81,120 +72,6 @@
                                         </form>
                                     </div>
                                 </div>
-
-                                <div role="tabpanel" class="tab-pane" id="oneway">
-                                    <div class="row">
-                                        <div class="col-xxs-12 col-xs-6 mt">
-                                            <div class="input-field">
-                                                <label for="from">From:</label>
-                                                <input type="text" class="form-control" id="from-place" placeholder="tel aviv" />
-                                            </div>
-                                        </div>
-                                        <div class="col-xxs-12 col-xs-6 mt">
-                                            <div class="input-field">
-                                                <label for="from">To:</label>
-                                                <input type="text" class="form-control" id="to-place" placeholder="rome" />
-                                            </div>
-                                        </div>
-                                        <div class="col-xxs-12 col-xs-6 mt alternate">
-                                            <div class="input-field">
-                                                <label for="date-start">Depart:</label>
-                                                <input type="text" class="form-control" id="date-start" placeholder="mm/dd/yyyy" />
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-12 mt">
-                                            <section>
-                                                <label for="class">Class(Flights only):</label>
-                                                <select class="cs-select cs-skin-border">
-                                                    <option value="" disabled selected>Economy</option>
-                                                    <option value="economy">Economy</option>
-                                                    <option value="first">First</option>
-                                                    <option value="business">Business</option>
-                                                </select>
-                                            </section>
-                                        </div>
-                                        <div class="col-xxs-12 col-xs-6 mt">
-                                            <section>
-                                                <label for="class">Number of persons:</label>
-                                                <select class="cs-select cs-skin-border">
-                                                    <option value="" disabled selected>1</option>
-                                                    <option value="1">1</option>
-                                                    <option value="2">2</option>
-                                                    <option value="3">3</option>
-                                                    <option value="4">4</option>
-                                                    <option value="5">5</option>
-                                                </select>
-                                            </section>
-                                        </div>
-                                        <div class="col-xs-12">
-                                            <input type="submit" class="btn btn-primary btn-block" value="Find me the cheapest way!">
-                                        </div>
-                                        <div class="col-xs-12">
-                                            <br>
-                                            <input type="submit" class="btn btn-primary btn-block" value="Find me the fastest way!">
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div role="tabpanel" class="tab-pane" id="multicity">
-                                    <div class="row">
-                                        <div class="col-xxs-12 col-xs-6 mt">
-                                            <div class="input-field">
-                                                <label for="from">From:</label>
-                                                <input type="text" class="form-control" id="from-place" placeholder="tel aviv" />
-                                            </div>
-                                        </div>
-                                        <div class="col-xxs-12 col-xs-6 mt">
-                                            <div class="input-field">
-                                                <label for="from">To:</label>
-                                                <input type="text" class="form-control" id="to-place" placeholder="rome" />
-                                            </div>
-                                        </div>
-                                        <div class="col-xxs-12 col-xs-6 mt alternate">
-                                            <div class="input-field">
-                                                <label for="date-start">Check In:</label>
-                                                <input type="text" class="form-control" id="date-start" placeholder="mm/dd/yyyy" />
-                                            </div>
-                                        </div>
-                                        <div class="col-xxs-12 col-xs-6 mt alternate">
-                                            <div class="input-field">
-                                                <label for="date-end">Check Out:</label>
-                                                <input type="text" class="form-control" id="date-end" placeholder="mm/dd/yyyy" />
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-12 mt">
-                                            <section>
-                                                <label for="class">Class(Flights only):</label>
-                                                <select class="cs-select cs-skin-border">
-                                                    <option value="" disabled selected>Economy</option>
-                                                    <option value="economy">Economy</option>
-                                                    <option value="first">First</option>
-                                                    <option value="business">Business</option>
-                                                </select>
-                                            </section>
-                                        </div>
-                                        <div class="col-xxs-12 col-xs-6 mt">
-                                            <section>
-                                                <label for="class">Number of persons:</label>
-                                                <select class="cs-select cs-skin-border">
-                                                    <option value="" disabled selected>1</option>
-                                                    <option value="1">1</option>
-                                                    <option value="2">2</option>
-                                                    <option value="3">3</option>
-                                                    <option value="4">4</option>
-                                                    <option value="5">5</option>
-                                                </select>
-                                            </section>
-                                        </div>
-                                        <div class="col-xs-12">
-                                            <input type="submit" class="btn btn-primary btn-block" value="Find me the cheapest way!">
-                                        </div>
-                                        <div class="col-xs-12">
-                                            <br>
-                                            <input type="submit" class="btn btn-primary btn-block" value="Find me the fastest way!">
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
 
                         </div>
@@ -204,7 +81,7 @@
 
                             <h2>Welcome to MSG</h2>
                             <h3>The gratest way to find your next vocation!</h3>
-                            <span class="price">Fucking A!<br />That's amazing bro!</span>
+                            <img src="@Url.Content("~/Content/MyTemplate/")images/giphy.gif" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
                             <!-- <p><a class="btn btn-primary btn-lg" href="#">Get Started</a></p> -->
                         </div>
                     </div>
