--- a/WebApplicationTravel/Views/Reservations/Details.cshtml
+++ b/WebApplicationTravel/Views/Reservations/Details.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Details</h2>
@@ -12,19 +11,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.totalPrice)
+            @Html.DisplayNameFor(model => model.Account.UserName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.totalPrice)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.totalTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.totalTime)
+            @Html.DisplayFor(model => model.Account.UserName)
         </dd>
 
     </dl>
