--- a/WebApplicationTravel/Views/Shared/_Layout.cshtml
+++ b/WebApplicationTravel/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
                     <li>@Html.ActionLink("Cities", "Index", "Cities")</li>
                     <li>@Html.ActionLink("Countries", "Index", "Countries")</li>
                     <li>@Html.ActionLink("Connections", "Index", "Connections")</li>
+                    <li>@Html.ActionLink("Accounts", "Index", "Accounts")</li>
+                    <li>@Html.ActionLink("Reservations", "Index", "Reservations")</li>
                     <li>@Html.ActionLink("Back", "Index", "Home")</li>
                 </ul>
             </div>
